cmake_minimum_required(VERSION 3.27)
project(LeetCode)

set(CMAKE_CXX_STANDARD 17)

#add_executable(new_target 1662.\ Check\ If\ Two\ String\ Arrays\ are\ Equivalent.cpp)
#add_executable(21.ValidParentheses.cpp "20. Valid Parentheses.cpp")
add_executable(target "1662. Check If Two String Arrays are Equivalent.cpp")
add_executable(new_target "1155. Number of Dice Rolls With Target Sum.cpp")
add_executable(draft_target "1155. Number of Dice Rolls With Target Sum.cpp")
